# palautusrepositorio

./: .gitignore  PULL.md  README.md  pyproject.toml  trackhaara1.txt
viikko1/nhl-statistics-1/src/: index.py  player_reader.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistic_service_test.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/: .pylintrc  pyproject.toml
viikko2/project-reader/src/: index.py  project.py  project_reader.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/login-robot/: log.html  output.xml  report.html
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/web-login/: log.html  output.xml  report.html
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: login.robot  register.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/: pyproject.toml
viikko5/int-joukko/src/: index.py  int_joukko.py
viikko5/int-joukko/src/tests/: int_joukko_test.py
viikko5/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko5/tennis/src/: tennis_game.py
viikko5/tennis/src/tests/: tennis_game_test.py
viikko6/query-language/src/: index.py  matchers.py
viikko7/kivi-paperi-sakset/src/: index.py  kivi_paperi_sakset.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py
